add embedded operator console
